Added discussion about energy.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{amsart}
 
 \input{StandardPaper2.tex}
+\input{local_definitions.tex}
 
 \begin{document}
 
@@ -35,7 +36,76 @@ where \(C > 0\) is a real constant and \(F\) is a Lipschitz function that is odd
 
 Such problems arise in studying equivariant \emph{harmonic map heat flow} and equivariant \emph{Yang-Mills flow}.
 
-\subsection*{Examples}
+\subsection{Energy and Gradient Flow}
+
+Let \(u\) solve
+\[
+\begin{cases}
+\frac{1}{2} (u^2)' &= F(u) \\
+u(0) &= 0.
+\end{cases}
+\]
+Note that \(F(\psi) = u(\psi) u'(\psi)\). Explicitly we have
+\[
+u(z) = \sqrt{\abs{\int_0^z F(w) dw}}
+\]
+and the condition that \(F(0) = 0\) and \(F\) is Lipschitz increasing near \(0\) should give some regularity of \(u\) near \(z = 0\). For example if \(F\) is \(C^{1,\alpha}\) then
+\[
+\int_0^z F(w) dw = \int_0^z F'(0) w + \bigo(w^{1+\alpha}) dw = z^2\left(\frac{1}{2} F'(0) + \bigo(z^{\alpha})\right)
+\]
+so that after taking the square root, we get \(u\) is at least \(C^{1,\alpha/2}\).
+
+Let
+\[
+a = \sup\{z > 0: u > 0 \text{ on } (0, z)\}
+\]
+where we allow \(a = \infty\). Then define the warped-product metric,
+\[
+g = dz^2 + u^2(z) d\theta^2
+\]
+on \(M = (0, a) \times \S^1\). Then an equivariant harmonic map \(\psi: (B, dr^2 + r^2 d\theta^2) \to (M, g)\) is harmonic if and only if equation \eqref{eq:pde} holds.
+
+\begin{defn}
+\label{defn:energy}
+The energy, \(\E(\psi)\) of a map \(\psi: [0, 1] \to \R\) is defined to be
+\[
+\E(\psi) = \frac{1}{2} \int_0^1 \left(\psi_r^2 + \frac{1}{r^2} u^2(\psi)\right) r dr.
+\]
+\end{defn}
+
+\begin{lemma}
+The equation \eqref{eq:pde} is the negative \(L^2\) gradient flow with respect to the weighted measure \(r dr\) for the energy \(\E\) defined in Definition \ref{defn:energy}.
+\end{lemma}
+
+\begin{proof}
+Let \(\psi(r, t)\) be a compactly supported smooth one-parameter family of smooth maps \(r \mapsto \psi(r, t)\). Here to say \(\psi\) is compactly supported means that the variation vector \(v = \partial_t|_{t=0} \psi\) is compactly supported in \((0, 1)\). That is, \(\operatorname{support} v = [a, b]\) with \(0 < a < b < a\).
+
+Then we compute
+\[
+\begin{split}
+\partial_t \E(\psi) &= \partial_t \frac{1}{2} \int_0^1  \left(\psi_r^2 + \frac{1}{r^2} u^2(\psi)\right) r dr \\
+&= \int_0^1  \left(\psi_r \psi_{rt} + \frac{1}{r^2} u(\psi)u'(\psi)\right) r dr \\
+&= \int_0^1 \left((\psi_r \psi_t r)_r - \psi_{rr} \psi_t r - \frac{1}{r} \psi_r \psi_t r + \frac{1}{r^2} F(\psi) \psi_t\right) dr \\
+&= - \int_0^1 \left(\psi_{rr} + \frac{1}{r} \psi_r - \frac{1}{r^2} F(\psi)\right) \psi_t r dr.
+\end{split}
+\]
+\end{proof}
+
+\begin{rem}
+\label{rem:finite_energy}
+
+Finite energy functions \(\psi\) must satisfy
+\[
+\int_0^1 \psi_r^2 r dr < \infty \text{ and } \int_0^1 \frac{u^2(\psi(r))}{r} dr < \infty
+\]
+So as \(r\to 0\), \(\psi_r\) must not blow up faster than \(1/r\) and (if say, \(u\) is \(C^{1,\alpha}\)) \(\abs{\psi}\) must not only be bounded, but must also be bounded above by \(r^{\beta}\) for some \(\beta > 0\). Both conditions are thus simultaneously satisfied or not satisfied at all. That is, finite energy solutions must satisfy
+\[
+\lim_{r \to 0} \abs{\frac{\psi(r)}{r^{\beta}}} < \infty
+\]
+for some \(\beta > 0\).
+\end{rem}
+
+\subsection{Examples}
 
 \subsubsection*{Harmonic maps into the round sphere.}
 
