--- a/StandardPaper2.tex
+++ b/StandardPaper2.tex
@@ -128,6 +128,7 @@
 \newcommand{\BEq}[4]{#1&#2#3	 &\quad &\text{on}~#4}
 \newcommand{\br}[1]{\left(#1\right)}
 
+\newcommand{\abs}[1]{\left|{#1}\right|}
 
 
 %Logical symbols
